fixes accidental overflow issue

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -7,6 +7,7 @@
 	min-height: calc(100vh - 190px);
 	overflow-y:scroll;
 	height:calc(100vh - 188px);
+	padding-bottom: 50px;
 }
 
 #about img{
